# db_generator

./: .gitignore  MANIFEST.in  README.md  dependencies.txt  password.py  pyproject.toml  tables.py  test.py  utils.py
_test/parents_and_children/: par_chil_test.py
_test/stock_returns/: stock_test.py
parents_and_children/: README.md  constants.py  create.py  test.py
parents_and_children/queries/: qu10.sql  qu2.py  qu2.sql  qu4.sql  qu5.sql  qu6.sql  qu8.sql  qu9.sql
parents_and_children/test/: test.py
parents_and_children/testing/: testing.py
queries/: qu1.sql  qu6.sql  qu8.py
queries/parents_and_children/: qu3.sql  qu4.sql  qu7.sql
src/dbgen/: utils.py
src/dbgen.egg-info/: PKG-INFO  SOURCES.txt
src/dbgen/investor_returns/: README.md  _tables.py
src/dbgen/parents_and_children/: README.md  _tables.py  create.py
src/dbgen/stock_returns/: README.md  _tables.py  create.py  utils.py
stock_returns/: README.md  create.py  debug.py  test.py  trigger.py  trigger.sql  utils.py
stock_returns/sql/: trans_to_port_trig.sql
stock_returns/test/: geo_bm.py  test.py
test/: par_chil_test.py  stock_test.py
test/parents_and_children/: par_chil_test.py
test/stock_returns/: debug_stock.py  one_ticker.py  stock_test.py
tests/investor_returns/: mysql_full_run.py
tests/parents_and_children/: mysql_full_run.py  par_chil_test.py  sqlite3_full_run.py
tests/stock_returns/: mysql_full_run.py  stock_test.py
tests/stock_returns/utils/: debug.py
tests/utils/: test.sql
tests/utils/sql_to_string/: sql_to_string.py  test.sql
(+4 files in other folders)
